Updated - Conhecendo e aplicando intervalo de confianca

--- a/Curso_de_Estatística_Parte_2.ipynb
+++ b/Curso_de_Estatística_Parte_2.ipynb
@@ -7481,7 +7481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -7491,8 +7491,22 @@
     "id": "aF2QQ0z3G3HU",
     "outputId": "31b20b10-a4f7-49fe-b113-f0fff1e2f30f"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5050"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "media_amostra = 5050\n",
+    "media_amostra"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -7506,7 +7520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -7516,8 +7530,22 @@
     "id": "BzIgN3C7G3HY",
     "outputId": "53b76a9a-fce9-41dc-829e-4c7b318b7d75"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.05"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "significancia = 0.05\n",
+    "significancia"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -7531,7 +7559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -7541,8 +7569,22 @@
     "id": "1JeWXwA6G3Ha",
     "outputId": "8ac9e63f-f2e5-46a5-b693-e221203ada3f"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.95"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confianca = 1 - significancia\n",
+    "confianca"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -7556,7 +7598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -7566,8 +7608,209 @@
     "id": "f9IMOwY2Xeva",
     "outputId": "e8efe36b-5dfd-4272-de0c-fdab162d3582"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Z</th>\n",
+       "      <th>0.00</th>\n",
+       "      <th>0.01</th>\n",
+       "      <th>0.02</th>\n",
+       "      <th>0.03</th>\n",
+       "      <th>0.04</th>\n",
+       "      <th>0.05</th>\n",
+       "      <th>0.06</th>\n",
+       "      <th>0.07</th>\n",
+       "      <th>0.08</th>\n",
+       "      <th>0.09</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1.60</th>\n",
+       "      <td>0.9452</td>\n",
+       "      <td>0.9463</td>\n",
+       "      <td>0.9474</td>\n",
+       "      <td>0.9484</td>\n",
+       "      <td>0.9495</td>\n",
+       "      <td>0.9505</td>\n",
+       "      <td>0.9515</td>\n",
+       "      <td>0.9525</td>\n",
+       "      <td>0.9535</td>\n",
+       "      <td>0.9545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.70</th>\n",
+       "      <td>0.9554</td>\n",
+       "      <td>0.9564</td>\n",
+       "      <td>0.9573</td>\n",
+       "      <td>0.9582</td>\n",
+       "      <td>0.9591</td>\n",
+       "      <td>0.9599</td>\n",
+       "      <td>0.9608</td>\n",
+       "      <td>0.9616</td>\n",
+       "      <td>0.9625</td>\n",
+       "      <td>0.9633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.80</th>\n",
+       "      <td>0.9641</td>\n",
+       "      <td>0.9649</td>\n",
+       "      <td>0.9656</td>\n",
+       "      <td>0.9664</td>\n",
+       "      <td>0.9671</td>\n",
+       "      <td>0.9678</td>\n",
+       "      <td>0.9686</td>\n",
+       "      <td>0.9693</td>\n",
+       "      <td>0.9699</td>\n",
+       "      <td>0.9706</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.90</th>\n",
+       "      <td>0.9713</td>\n",
+       "      <td>0.9719</td>\n",
+       "      <td>0.9726</td>\n",
+       "      <td>0.9732</td>\n",
+       "      <td>0.9738</td>\n",
+       "      <td>0.9744</td>\n",
+       "      <td>0.9750</td>\n",
+       "      <td>0.9756</td>\n",
+       "      <td>0.9761</td>\n",
+       "      <td>0.9767</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.00</th>\n",
+       "      <td>0.9772</td>\n",
+       "      <td>0.9778</td>\n",
+       "      <td>0.9783</td>\n",
+       "      <td>0.9788</td>\n",
+       "      <td>0.9793</td>\n",
+       "      <td>0.9798</td>\n",
+       "      <td>0.9803</td>\n",
+       "      <td>0.9808</td>\n",
+       "      <td>0.9812</td>\n",
+       "      <td>0.9817</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.10</th>\n",
+       "      <td>0.9821</td>\n",
+       "      <td>0.9826</td>\n",
+       "      <td>0.9830</td>\n",
+       "      <td>0.9834</td>\n",
+       "      <td>0.9838</td>\n",
+       "      <td>0.9842</td>\n",
+       "      <td>0.9846</td>\n",
+       "      <td>0.9850</td>\n",
+       "      <td>0.9854</td>\n",
+       "      <td>0.9857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.20</th>\n",
+       "      <td>0.9861</td>\n",
+       "      <td>0.9864</td>\n",
+       "      <td>0.9868</td>\n",
+       "      <td>0.9871</td>\n",
+       "      <td>0.9875</td>\n",
+       "      <td>0.9878</td>\n",
+       "      <td>0.9881</td>\n",
+       "      <td>0.9884</td>\n",
+       "      <td>0.9887</td>\n",
+       "      <td>0.9890</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.30</th>\n",
+       "      <td>0.9893</td>\n",
+       "      <td>0.9896</td>\n",
+       "      <td>0.9898</td>\n",
+       "      <td>0.9901</td>\n",
+       "      <td>0.9904</td>\n",
+       "      <td>0.9906</td>\n",
+       "      <td>0.9909</td>\n",
+       "      <td>0.9911</td>\n",
+       "      <td>0.9913</td>\n",
+       "      <td>0.9916</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.40</th>\n",
+       "      <td>0.9918</td>\n",
+       "      <td>0.9920</td>\n",
+       "      <td>0.9922</td>\n",
+       "      <td>0.9925</td>\n",
+       "      <td>0.9927</td>\n",
+       "      <td>0.9929</td>\n",
+       "      <td>0.9931</td>\n",
+       "      <td>0.9932</td>\n",
+       "      <td>0.9934</td>\n",
+       "      <td>0.9936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.50</th>\n",
+       "      <td>0.9938</td>\n",
+       "      <td>0.9940</td>\n",
+       "      <td>0.9941</td>\n",
+       "      <td>0.9943</td>\n",
+       "      <td>0.9945</td>\n",
+       "      <td>0.9946</td>\n",
+       "      <td>0.9948</td>\n",
+       "      <td>0.9949</td>\n",
+       "      <td>0.9951</td>\n",
+       "      <td>0.9952</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Z       0.00    0.01    0.02    0.03    0.04    0.05    0.06    0.07    0.08  \\\n",
+       "1.60  0.9452  0.9463  0.9474  0.9484  0.9495  0.9505  0.9515  0.9525  0.9535   \n",
+       "1.70  0.9554  0.9564  0.9573  0.9582  0.9591  0.9599  0.9608  0.9616  0.9625   \n",
+       "1.80  0.9641  0.9649  0.9656  0.9664  0.9671  0.9678  0.9686  0.9693  0.9699   \n",
+       "1.90  0.9713  0.9719  0.9726  0.9732  0.9738  0.9744  0.9750  0.9756  0.9761   \n",
+       "2.00  0.9772  0.9778  0.9783  0.9788  0.9793  0.9798  0.9803  0.9808  0.9812   \n",
+       "2.10  0.9821  0.9826  0.9830  0.9834  0.9838  0.9842  0.9846  0.9850  0.9854   \n",
+       "2.20  0.9861  0.9864  0.9868  0.9871  0.9875  0.9878  0.9881  0.9884  0.9887   \n",
+       "2.30  0.9893  0.9896  0.9898  0.9901  0.9904  0.9906  0.9909  0.9911  0.9913   \n",
+       "2.40  0.9918  0.9920  0.9922  0.9925  0.9927  0.9929  0.9931  0.9932  0.9934   \n",
+       "2.50  0.9938  0.9940  0.9941  0.9943  0.9945  0.9946  0.9948  0.9949  0.9951   \n",
+       "\n",
+       "Z       0.09  \n",
+       "1.60  0.9545  \n",
+       "1.70  0.9633  \n",
+       "1.80  0.9706  \n",
+       "1.90  0.9767  \n",
+       "2.00  0.9817  \n",
+       "2.10  0.9857  \n",
+       "2.20  0.9890  \n",
+       "2.30  0.9916  \n",
+       "2.40  0.9936  \n",
+       "2.50  0.9952  "
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tabela_normal_padronizada[16:26]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -7591,7 +7834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -7601,12 +7844,25 @@
     "id": "nT5ZTwjOG3Go",
     "outputId": "9c20d5b5-fb36-40f1-b901-3969a2fa8ea0"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.475"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.95 / 2"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -7616,12 +7872,25 @@
     "id": "vMjck-3ZU_sz",
     "outputId": "56a3f3ba-e5d4-40c7-dc4c-b31ed5d07262"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.975"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.5 + (0.95 / 2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -7631,12 +7900,25 @@
     "id": "L4CMGZ3oVHLX",
     "outputId": "60470140-1dfa-4d5c-9627-097378b2fc8e"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.96"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1.9 + 0.06"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -7646,8 +7928,22 @@
     "id": "JJS6Z-85G3Hf",
     "outputId": "4cc8e179-05a4-4237-f099-06550ac200bf"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.959963984540054"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z = norm.ppf(0.975)\n",
+    "z"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -7677,7 +7973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -7687,12 +7983,26 @@
     "id": "LyQ6UUYtG3Hh",
     "outputId": "4c066583-4272-4e26-daf5-575ea4815371"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "150"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "desvio_padrao = 150\n",
+    "desvio_padrao"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -7702,12 +8012,26 @@
     "id": "ebvikT95G3Hi",
     "outputId": "bfbc2f5c-e706-46a6-aa6c-e94632aed4fc"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 20\n",
+    "n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -7717,12 +8041,26 @@
     "id": "TxM3yTpjG3Hk",
     "outputId": "a38a0bfc-2c3b-48f4-cea7-ee5f5147a251"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.47213595499958"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raiz_de_n = np.sqrt(n)\n",
+    "raiz_de_n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -7732,8 +8070,22 @@
     "id": "HNAcOpl0G3Hl",
     "outputId": "3b37c2d5-b02d-40af-897d-6c588e2696aa"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33.54101966249684"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sigma = desvio_padrao / raiz_de_n\n",
+    "sigma"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -7747,7 +8099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -7757,8 +8109,22 @@
     "id": "gAfakih5G3Ho",
     "outputId": "48958fa3-2cf8-4bc5-dfc3-0fb925798b38"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65.73919054324361"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e = z * sigma\n",
+    "e"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -7772,7 +8138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -7782,8 +8148,25 @@
     "id": "NlJCcPZnG3Hq",
     "outputId": "09cee323-103e-4832-c23f-97daf4b9929f"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4984.260809456757, 5115.739190543243)"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intervalo = (\n",
+    "    media_amostra - e,\n",
+    "    media_amostra + e\n",
+    ")\n",
+    "intervalo"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -7797,7 +8180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -7807,8 +8190,73 @@
     "id": "U92vSYMkG3Hu",
     "outputId": "45923471-3d21-42ad-a922-5067ff21067b"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4984.260809456757, 5115.739190543243)"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "norm.interval(confidence = 0.95, loc = media_amostra, scale = sigma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.6630845892196133\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercicio da Luri\n",
+    "\n",
+    "n = 50\n",
+    "desvio_padrao = 6\n",
+    "confianca = 0.95\n",
+    "sigma = desvio_padrao / (np.sqrt(n))\n",
+    "\n",
+    "print(z * sigma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(27.592969951356466, 28.407030048643534)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Exercício Aula\n",
+    "\n",
+    "n = 1976\n",
+    "desvio_padrao = 11\n",
+    "media_amostral = 28\n",
+    "confianca = 0.90\n",
+    "sigma = desvio_padrao / (np.sqrt(n))\n",
+    "\n",
+    "norm.interval(confianca, loc = media_amostral, scale = sigma)"
+   ]
   },
   {
    "cell_type": "markdown",
