Updated - Calculando o tamanho da amostra para populacao infinita

--- a/Curso_de_Estatística_Parte_2.ipynb
+++ b/Curso_de_Estatística_Parte_2.ipynb
@@ -8372,7 +8372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -8382,12 +8382,25 @@
     "id": "XtJ5I_kaKDN3",
     "outputId": "a519e330-ddf0-492c-f42d-5cef36fed4c9"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.475"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.95 / 2"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -8397,12 +8410,25 @@
     "id": "-4TLCgNLKC95",
     "outputId": "19f3b7af-ff33-4db4-c675-c62b5088137e"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.975"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.5 + (0.95/2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -8412,8 +8438,22 @@
     "id": "7XDT12I4ViYN",
     "outputId": "a0af8729-80a8-4b33-b307-96d144c83029"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.959963984540054"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z = norm.ppf(0.975)\n",
+    "z"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -8427,7 +8467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -8437,8 +8477,22 @@
     "id": "1RmtZfj-G3Gr",
     "outputId": "d3e77bf1-b933-4ade-846f-95e25f4e1d6e"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3323.39"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sigma = 3323.39\n",
+    "sigma"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -8452,7 +8506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -8462,8 +8516,22 @@
     "id": "NTRMt2gWG3Gt",
     "outputId": "f7d7ae3f-7e33-41cc-a11a-5b09de70cc2c"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e = 100\n",
+    "e"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -8477,7 +8545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -8488,8 +8556,54 @@
     "outputId": "8f74510a-4f4b-4129-d3c3-d31be24567fa",
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4243"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = (z * (sigma / e)) ** 2\n",
+    "int(n.round())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29.0"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Exercicio Aula\n",
+    "\n",
+    "media = 45.5\n",
+    "sigma = 15\n",
+    "significancia = 0.10\n",
+    "confianca = 1 - significancia\n",
+    "\n",
+    "z = norm.ppf(0.5 + (confianca / 2))\n",
+    "erro_percentual = 0.10\n",
+    "e = media * erro_percentual\n",
+    "\n",
+    "n = (z * (sigma / e)) ** 2\n",
+    "n.round()"
+   ]
   },
   {
    "cell_type": "markdown",
