Updated - Calculando o tamanho da amostra para populacao finita

--- a/Curso_de_Estatística_Parte_2.ipynb
+++ b/Curso_de_Estatística_Parte_2.ipynb
@@ -8707,7 +8707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -8717,8 +8717,22 @@
     "id": "gXWn9zTETyNS",
     "outputId": "4daa26ff-4a96-47fb-9f0e-53a4390d701e"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10000"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N = 10000\n",
+    "N"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -8732,7 +8746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -8742,8 +8756,22 @@
     "id": "ZUs9aYJRTyNT",
     "outputId": "02560c9f-57ee-41c7-cdf4-5fd382365a74"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.959963984540054"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z = norm.ppf(0.5 + (0.95/2))\n",
+    "z"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -8757,7 +8785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -8767,8 +8795,22 @@
     "id": "fKqFI_TZTyNU",
     "outputId": "68a9ee2f-428a-4d18-9148-f33704968fb7"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = 12\n",
+    "s"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -8782,7 +8824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -8792,8 +8834,22 @@
     "id": "hyhJ3MQKTyNX",
     "outputId": "2849bd05-6c70-4d97-980d-67e140f27850"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e = 5\n",
+    "e"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -8809,7 +8865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -8820,8 +8876,50 @@
     "outputId": "8494180f-9149-419f-dee9-f02ec3e81b93",
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = ((z**2) * (s**2) * (N)) / (((z**2) * (s**2) + ((e**2) * (N-1))))\n",
+    "int(n.round())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Exercicio da Aula\n",
+    "\n",
+    "N = 2000\n",
+    "s = 480\n",
+    "e = 300\n",
+    "z = norm.ppf(0.5 + (0.95/2))\n",
+    "\n",
+    "n = ((z**2) * (s**2) * (N)) / (((z**2) * (s**2) + ((e**2) * (N-1))))\n",
+    "int(n.round())"
+   ]
   },
   {
    "cell_type": "markdown",
